--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
