--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 ControlSafetyBench = "b878d8fe-c8de-4236-8931-715afe6be538"
 ControlSystemsBase = "aaaaaaaa-a6ca-5380-bf3e-84a91bcd477e"
+ControlTimingSafety = "3a76c758-31f1-42cb-b697-12fe755e3b12"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
