--- a/Project.toml
+++ b/Project.toml
@@ -12,3 +12,4 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 RealTimeScheduling = "f1524149-62f5-490d-8249-9bfac76a7111"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
